[package]
name = "swc_plugin_raw_macro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Strip debug symbols
strip = "symbols"

[dependencies]
serde = "1.*"
serde_json = "1.*"
swc_core = { version = "0.95.*", features = ["ecma_plugin_transform"] }
